
Denora v1.4.6-git
-------------

Additions
11/04/22 r432 Added parameter support for !stats and !gstats
11/02/12 r423 Added support for accounts on Charybdis at burst
11/02/12 r421 Added support for accounts on Charybdis
11/02/11 r416 Added support for ircd-rizon

Changes
12/04/11 Added 'cron' function to denorarc for crontab usage 
12/04/11 Updated ScaryNet protocol
12/03/31 Updated GeoIP databases
11/05/04 r435 Fixed formatting of docs/EVENTS
11/04/10 r428 documented the -protocoldebug option in the -help output
11/04/10 r428 made denora accept options that start with --
11/02/11 r419 Updated Denora icon
11/02/11 r416 Updated Windows installer

Fixes
12/04/06 [1] Fixed geoipupd script breaking geoip (#1406)
12/03/31 Fixed grammar errors (#1260)
12/02/05 r436 Fixed ADMIN ADD command ignoring supplied host mask
11/04/10 r431 Fixed duplicate call to denora_set_umode() in ircdrizon protocol
11/04/10 r430 Fixed duplicate call to denora_set_umode() in charybdis protocol
11/04/10 r429 Fixed unknown user mode Z in charybdis protocol
11/03/30 r427 Fixed crash on nickchange in ngircd protocol (#1257)
11/02/13 r426 Fixed erroneous ','s in SQL queries in do_account()
11/02/12 r424 Fixed support for accounts on Charybdis at burst (oops)
11/02/12 r422 Fixed compile errors
11/02/12 r421 Fixed memleaks and crashbug in do_p10account
11/02/11 r417 Fixed Denora not running on Windows XP/2003 anymore
11/02/11 r416 Scarynet module was not compiled on windows

Removals
11/02/11 r418 Removed support for Nefarious ircd 1.0-1.2
11/02/11 r416 Removed support for Asuka ircd
11/02/11 r416 Removed support for Hybrid ircd
11/02/11 r416 Removed support for Hyperion ircd
11/02/11 r416 Removed support for ngircd
11/02/11 r416 Removed support for Plexus3 ircd
11/02/11 r416 Removed support for Solidircd
11/02/11 r416 Removed support for Ultimate3 ircd

Developers
Denora Team <dev@denorastats.org>

Contributors
[1] Conti <sojugarden@gmail.com>


Denora v1.4.5
-------------

Additions