@@ -3,6 +3,7 @@ Denora v1.4.6-git
 -------------
 
 Additions
+12/04/20 Added country lookup for servers to support #46@magirc
 11/04/22 r432 Added parameter support for !stats and !gstats
 11/02/12 r423 Added support for accounts on Charybdis at burst
 11/02/12 r421 Added support for accounts on Charybdis
